--- a/package.json
+++ b/package.json
@@ -2,22 +2,10 @@
     "name": "kiwi",
     "version": "1.0.0",
     "private": true,
-    "type": "module",
     "description": "几维 - 适用于 uni-app 的移动端通用UI组件库",
     "author": "pecasha<chihai@pecasha.com>",
     "homepage": "https://kiwi.pecasha.com",
     "license": "GPL-3.0-or-later",
-    "main": "./lib/kiwi.cjs",
-    "module": "./lib/kiwi.mjs",
-    "esnext": "./lib/kiwi.mjs",
-    "typings": "./types/index.d.ts",
-    "exports": {
-        ".": {
-            "import": "./lib/kiwi.mjs",
-            "require": "./lib/kiwi.cjs",
-            "types": "./types/index.d.ts"
-        }
-    },
     "repository": {
         "type": "git",
         "url": "https://github.com/pecasha/kiwi.git"
@@ -26,43 +14,23 @@
         "registry": "https://registry.npmjs.org"
     },
     "files": [
-        "lib",
-        "types",
-        "src/types"
+        "components",
+        "styles"
     ],
     "scripts": {
-        "dev": "vite",
-        "build": "vue-tsc && vite build",
-        "preview": "vite preview",
         "up": "pnpm update -i --latest",
-        "iconfont": "pdk-base64-iconfont -f ./development/iconfont/download.zip -s ./src/styles/fonts/iconloni.less -n iconloni -d",
+        "iconfont": "pdk-base64-iconfont -f ./development/iconfont/download.zip -s ./styles/fonts/iconkiwi.less -n iconkiwi -d",
         "publ": "pdk-npm-publish & npm publ"
     },
-    "dependencies": {
-        "@pecasha/util": "^2.1.0"
-    },
     "peerDependencies": {
+        "@pecasha/uniapp-helpers": "^1.0.0",
         "@pecasha/util": "^2.1.0",
         "vue": "^3.4.14",
         "vue-facing-decorator": "^3.0.4"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-decorators": "^7.23.7",
         "@dcloudio/types": "^3.4.7",
         "@pecasha/devkit": "^1.0.2",
-        "@pecasha/postcss-pxtorpx": "^1.0.0",
-        "@types/node": "^20.11.5",
-        "@vitejs/plugin-vue": "^5.0.3",
-        "@vitejs/plugin-vue-jsx": "^3.1.0",
-        "less": "^4.2.0",
-        "less-loader": "^12.0.0",
-        "postcss-pxtorem": "^6.0.0",
-        "tslib": "^2.6.2",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.11",
-        "vue": "^3.4.14",
-        "vue-facing-decorator": "^3.0.4",
-        "vue-router": "^4.2.5",
-        "vue-tsc": "^1.8.27"
+        "typescript": "^5.3.3"
     }
 }
